# fibonacci-example

./: README.md  pyproject.toml
src/fibonacci/: fibo.py
tests/: test_fibo.py
