[tool.poetry]
name = "fibonacci"
version = "0.1.0"
description = "A TDD example using fibonacci"
authors = ["theneubeck"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
